# Ultimate-Media-Search-Bot

./: Index.py  README.md  admin.html  app.py  bot.py  config.py  database.py  env.example  gitignore  index.py  pyproject.toml  requirements.txt  vercel.json
api/: index.py
public/: index.html
static/js/: app.js
template/: dashboard.html
templates/: admin.html  dashboard.html  welcome_card.html
templates/admin/: login.html
utils/: helpers.py  security.py  verification.py
