[project]
name = "earn-promote-bot"
version = "1.0.0"
description = "Professional Telegram Earn & Promote Bot"
requires-python = ">=3.9"
dependencies = [
    "pyTelegramBotAPI==4.14.0",
    "Flask==3.0.0",
    "firebase-admin==6.2.0",
    "requests==2.31.0",
    "gunicorn==21.2.0",
    "python-dotenv==1.0.0",
    "Werkzeug==3.0.1"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["bot"]
